# ukr-learn

./: .gitignore  config.yaml.example  main.py  pyproject.toml  requirements.txt
data/grammar/: 6f4c12cd-e036-4f8d-8c75-32b047350812.json  cases-overview.json
data/texts/: 6fc7fbb4-43a5-4411-a6e5-b304849fd11f.json  9ed515d7-8616-4478-a21f-2d0717f69c21.json  sample-cafe.json  sample-greeting.json
data/wordlists/: 2ec6c5cc-f206-4f95-8882-d9e2c7b6db6b.json  30e7ab43-b903-44e5-bbb0-2fe47db91815.json  3bbf6d60-cb9f-4ceb-8040-049bd9b1e018.json  8cd4dd4c-386b-4c0d-9da1-ad8df934587c.json  ab38cc92-5dbe-4a96-bbc7-5de77c259ad1.json  b9d89248-52f7-4b16-8933-88fe1914a5e5.json  basic-greetings.json  cafe-food.json  common-words.json
src/: __init__.py
src/ai/: __init__.py  anthropic.py  base.py  generator.py  openai.py
src/core/: __init__.py  content_manager.py  models.py  text_processor.py  tts.py  vocabulary.py
src/storage/: __init__.py  database.py  files.py
src/ui/: __init__.py  app.py  screens.py  theme.py  widgets.py
tests/: test_core.py
